--- a/Atividades/Perguntas Starter/review - Copy.html
+++ b/Atividades/Perguntas Starter/review - Copy.html
@@ -1029,50 +1029,11 @@ firebase.auth().onAuthStateChanged(function(user){
       speechSynthesis.cancel(); speechSynthesis.speak(u);
     }catch(e){}
   }
-  /* =========================
-   Friendly feedback (MP3 ONLY – no TTS)
-========================= */
-
-const FRIENDLY_AUDIO_MAP = {
-  "Great job!": "amazing-work!.mp3",
-  "Awesome!": "awesome!.mp3",
-  "You did it!": "you-did-it!.mp3",
-  "Great!": "great!.mp3",
-  "Nice!": "nice!.mp3",
-  "Yes! Great job!": "yes!-great-job!.mp3",
-  "Not this one!": "not-this-one!.mp3",
-  "Almost!": "almost!.mp3",
-  "Try again next time!": "try-again!.mp3"
-};
-
-function speakFriendly(pool){
-  if (!Array.isArray(pool) || !pool.length) return;
-
-  const phrase = pool[(Math.random() * pool.length) | 0];
-  const file = FRIENDLY_AUDIO_MAP[phrase];
-
-  if (!file) {
-    console.warn("[Audio] No MP3 mapped for phrase:", phrase);
-    return;
+  function speakFriendly(pool){
+    const list = Array.isArray(pool) && pool.length ? pool : ['Great job!'];
+    const pick = list[(Math.random()*list.length)|0];
+    speak(pick);
   }
-
-  try {
-    stopAllAudio();
-    const a = new Audio(`./${file}`);
-    currentAudio = a;
-    a.onended = () => { currentAudio = null; };
-    a.onerror = () => {
-      console.warn("[Audio] Failed to play:", file);
-      currentAudio = null;
-    };
-    a.play().catch(err => {
-      console.warn("[Audio] Playback blocked:", err);
-      currentAudio = null;
-    });
-  } catch (err) {
-    console.warn("[Audio] Error playing friendly audio:", err);
-  }
-}
 
   /* =========================
      Audio da RESPOSTA (apenas audio_mcq)
