--- a/Atividades/Testword2B2CFacil/index - Copy.html
+++ b/Atividades/Testword2B2CFacil/index - Copy.html
@@ -403,101 +403,20 @@ async function generatePDF() {
     };
 }
 
-// =================== MISSING WORD LOGIC + ÁUDIO (MP3 -> TTS fallback) ====================
-// Áudio atual (para parar/evitar sobreposição)
-let currentAudio = null;
-
-// TTS (fallback)
-function speakWithTTS(text) {
+// =================== MISSING WORD LOGIC + CARREGANDO ARQUIVO ====================
+function playSound(word) {
     if ('speechSynthesis' in window) {
-        try {
-            const synth = window.speechSynthesis;
-            synth.cancel();
-            const utterThis = new SpeechSynthesisUtterance(text);
-            utterThis.lang = 'en-US';
-            synth.speak(utterThis);
-        } catch (e) {
-            console.error("Erro no TTS:", e);
-        }
+        const synth = window.speechSynthesis;
+        const utterThis = new SpeechSynthesisUtterance(word);
+        utterThis.lang = 'en-US';
+        synth.cancel(); 
+        synth.speak(utterThis);
     } else {
         console.error("Speech synthesis não é suportado neste navegador.");
     }
 }
 
-// Checa existência do MP3 e tenta tocar. Se não existir (ou falhar), cai no TTS.
-// Observação: em alguns hosts, HEAD pode falhar/ser bloqueado; por isso há fallback para tocar direto.
-async function playSound(word, audioPath) {
-    // Para qualquer TTS em andamento
-    if ('speechSynthesis' in window) {
-        try { window.speechSynthesis.cancel(); } catch (e) {}
-    }
-
-    // Para áudio anterior
-    if (currentAudio) {
-        try {
-            currentAudio.pause();
-            currentAudio.currentTime = 0;
-        } catch (e) {}
-        currentAudio = null;
-    }
-
-    // Se não passou caminho, vai direto pro TTS
-    if (!audioPath) {
-        speakWithTTS(word);
-        return;
-    }
-
-    // 1) Tenta verificar se o arquivo existe (HEAD)
-    let seemsToExist = false;
-    try {
-        const res = await fetch(audioPath, { method: 'HEAD', cache: 'no-store' });
-        if (res && res.ok) {
-            seemsToExist = true;
-        } else {
-            // 404/403/etc -> cai no TTS
-            seemsToExist = false;
-        }
-    } catch (err) {
-        // HEAD pode falhar (CORS/host). Nesse caso, tentamos tocar direto.
-        seemsToExist = true;
-    }
-
-    if (!seemsToExist) {
-        speakWithTTS(word);
-        return;
-    }
-
-    // 2) Tenta tocar MP3
-    try {
-        const audio = new Audio(audioPath);
-        currentAudio = audio;
-        audio.preload = "auto";
-
-        // Se der erro de mídia (404 real, decode, etc.), cai pro TTS
-        audio.onerror = function() {
-            console.warn("Falha ao carregar/tocar MP3. Usando TTS:", audioPath);
-            try {
-                if (currentAudio) {
-                    currentAudio.pause();
-                    currentAudio.currentTime = 0;
-                }
-            } catch (e) {}
-            currentAudio = null;
-            speakWithTTS(word);
-        };
-
-        const playPromise = audio.play();
-        if (playPromise && typeof playPromise.then === "function") {
-            await playPromise;
-        }
-    } catch (err) {
-        // Alguns browsers podem bloquear se não for gesto do usuário; aqui o clique é gesto, mas mantemos fallback
-        console.warn("Erro ao tentar tocar MP3. Usando TTS:", err);
-        speakWithTTS(word);
-    }
-}
-
-function createActivity(imageUrl, word, audioPath) {
+function createActivity(imageUrl, word) {
     const activityContainer = document.getElementById('activity-container');
     const activityDiv = document.createElement('div');
     activityDiv.classList.add('activity');
@@ -519,7 +438,7 @@ function createActivity(imageUrl, word, audioPath) {
     soundButton.style.cursor = 'pointer';
     soundButton.style.marginLeft = '10px';
     soundButton.addEventListener('click', function() {
-        playSound(word, audioPath);
+        playSound(word);
     });
     activityDiv.appendChild(soundButton);
 
@@ -532,7 +451,7 @@ function createActivity(imageUrl, word, audioPath) {
     wordInput.type = 'text';
     wordInput.placeholder = "Type the word here";
     wordContainer.appendChild(wordInput);
-    
+
     // Exibe a palavra completa
     const fullWordElement = document.createElement('div');
     fullWordElement.innerText = word.toUpperCase();
@@ -557,11 +476,7 @@ async function loadActivities() {
         words.forEach((word, index) => {
             // imagens em ../../../../${level}/${unit}/data2/imagens/imagemX.png
             const imageUrl = `../../../../${level}/${unit}/data2/imagens/imagem${index + 1}.png`;
-
-            // áudios em ../../../../${level}/${unit}/data2/sounds/somX.mp3
-            const audioPath = `../../../../${level}/${unit}/data2/sounds/som${index + 1}.mp3`;
-
-            createActivity(imageUrl, word, audioPath);
+            createActivity(imageUrl, word);
         });
         activities = words;
     } catch (error) {
@@ -680,7 +595,7 @@ async function unlockNextPhase(userId) {
 async function saveGradeToDatabase(userId, newGrade, isLinked) {
     const { level, unit } = getParamsFromURL();
     // Ajuste o nome do campo conforme desejar
-    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 1`);
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 2`);
 
     try {
         const snapshot = await dbRef.once('value');
@@ -709,7 +624,7 @@ function loadExistingGrade() {
         if (user) {
             const userId = user.uid;
             const { level, unit } = getParamsFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 1`);
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 2`);
 
             try {
                 const snapshot = await dbRef.once('value');
@@ -717,7 +632,7 @@ function loadExistingGrade() {
                 if (existingGrade !== null) {
                     displayGrade(existingGrade);
                 } else {
-                    console.log("Nenhuma nota encontrada (test - complete word 1).");
+                    console.log("Nenhuma nota encontrada (test - complete word 2).");
                 }
             } catch (error) {
                 console.error("Erro ao buscar a nota:", error);
