--- a/Atividades/Missing Word3/index.html
+++ b/Atividades/Missing Word3/index.html
@@ -409,7 +409,7 @@
         }
     }
 
-    // ===== Helpers de hint (NOVO)
+    // ===== Helpers de hint (mantido)
     function buildHintText(word){
         // Ex.: "Be kind" -> "_E _IND"
         // Preserva palavras; se houver várias palavras, aplica a cada uma.
@@ -417,7 +417,7 @@
         const hinted = parts.map(p => {
             if (!p) return ""; // caso de espaços duplicados (não comum em words.txt)
             if (p.length === 1) return "_";
-            return "_" + p.slice(1).toUpperCase();
+            return "_" + p.slice(1);
         });
         return hinted.join(' ');
     }
@@ -451,7 +451,14 @@
         track.appendChild(thumb); overflowUi.appendChild(leftBtn); overflowUi.appendChild(track); overflowUi.appendChild(rightBtn);
         dropWrap.appendChild(overflowUi);
 
-        // ===== Slots: letras + separadores de espaço (NOVO) =====
+        // Texto com placeholder (hint)
+        const fullWordElement = document.createElement('div');
+        fullWordElement.className = 'full-word';
+        fullWordElement.textContent = buildHintText(word);
+        fullWordElement.style.fontWeight = 'bold';
+        fullWordElement.style.marginTop = '10px';
+
+        // ===== Slots: letras + separadores de espaço =====
         const letterInputs = [];          // só inputs de letras (para navegação/backspace)
         const slots = [];                 // sequência completa, incluindo espaços, para validar/frase final
         const chars = String(word).split('');
@@ -514,6 +521,9 @@
                     }).join('');
 
                     if (userWord === String(word).toUpperCase()) {
+                        // ===== NOVO: completa a dica com o texto ORIGINAL do words.txt =====
+                        fullWordElement.textContent = word;
+
                         playMp3OrSpeak(wordIndex, word);
                         completedWords++;
                         if (completedWords === activities.length) showCompletionModal();
@@ -536,12 +546,6 @@
             slots.push({ type:'letter', input, expected: expectedChar });
         });
 
-        // Texto com placeholder (AJUSTADO para frases)
-        const fullWordElement = document.createElement('div');
-        fullWordElement.className = 'full-word';
-        fullWordElement.textContent = buildHintText(word);
-        fullWordElement.style.fontWeight = 'bold';
-        fullWordElement.style.marginTop = '10px';
         wordContainer.appendChild(fullWordElement);
 
         activityDiv.appendChild(wordContainer);
@@ -551,7 +555,6 @@
         // ====== Layout adaptativo + overflow amigável ======
         // Para layout, consideramos "slots" (letras + espaços visuais) como unidades.
         dropZone.dataset.letters = String(slots.length);
-
         const ro = new ResizeObserver(()=> fitSlotsToOneLine(dropViewport, dropZone, dropWrap, track, thumb, {resetScroll:true}));
         ro.observe(activityDiv);
         imgElement.addEventListener('load', ()=> fitSlotsToOneLine(dropViewport, dropZone, dropWrap, track, thumb, {resetScroll:true}));
